[gd_scene load_steps=4 format=3 uid="uid://cd3wir60p7con"]

[ext_resource type="Script" path="res://edit.gd" id="1_8rhxp"]
[ext_resource type="PackedScene" uid="uid://dh7qi35h7vkuq" path="res://initial_state.tscn" id="2_fxe3w"]
[ext_resource type="PackedScene" uid="uid://cli44osk288cl" path="res://device/bounds.tscn" id="3_s3l02"]

[node name="Edit" type="Node2D"]
script = ExtResource("1_8rhxp")

[node name="Bounds" parent="." instance=ExtResource("3_s3l02")]

[node name="InitialState" parent="." instance=ExtResource("2_fxe3w")]

[node name="Save" type="Button" parent="."]
offset_left = 710.0
offset_top = 187.0
offset_right = 754.0
offset_bottom = 218.0
text = "Save"

[node name="Load" type="Button" parent="."]
offset_left = 759.0
offset_top = 187.0
offset_right = 805.0
offset_bottom = 218.0
text = "Load
"

[node name="Play" type="Button" parent="."]
offset_left = 711.0
offset_top = 221.0
offset_right = 805.0
offset_bottom = 252.0
text = "Play"

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
